update: fix padding on mobile nav links

--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ body {
 	}
 	.nav-link {
 		font-size: 0.8em;
-		padding: 0.3rem 0.7rem;
+		padding: 0.4rem 0.7rem;
 	}
 	#hero-image {
 		width: 75%;
